# ACGS-2 Policy Marketplace Service - Project Configuration
# Constitutional Hash: cdd01ef066bc6cf2

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-marketplace-service"
version = "1.0.0"
description = "ACGS-2 Policy Marketplace Service for sharing, discovering, and managing governance policy templates"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "ACGS Team"}
]
keywords = [
    "acgs",
    "policy-marketplace",
    "governance-templates",
    "ai-governance",
    "constitutional-ai"
]
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "cryptography>=46.0.3",
    "python-multipart>=0.0.20",
    "PyJWT>=2.10.0",
    "redis>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.27.0",
    "fakeredis>=2.18.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "asyncio: mark test as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
relative_files = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*.pyc",
    "venv/*",
    ".venv/*",
    "*/tests/*",
    "conftest.py",
    "**/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "B", "I"]
lint.ignore = [
    "E501",   # line too long, handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F841", "F401"]
"*/tests/*" = ["F841", "F401"]
"**/test_*.py" = ["F841", "F401"]
"**/*_test.py" = ["F841", "F401"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]
check_untyped_defs = true
disallow_any_generics = false
