# ACGS-2 CLI Tool
# Constitutional Hash: cdd01ef066bc6cf2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acgs2_cli"
version = "2.0.0"
description = "ACGS-2 Unified CLI Tool for AI Constitutional Governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "ACGS Team", email = "cli@acgs.io" }
]
keywords = [
    "acgs",
    "ai-governance",
    "constitutional-ai",
    "cli",
    "policy-management",
    "compliance"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "acgs2-sdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[project.scripts]
acgs2_cli = "acgs2_cli.main:cli"

[project.urls]
Homepage = "https://acgs.io"
Documentation = "https://docs.acgs.io/cli"
Repository = "https://github.com/dislovelhl/acgs2"
Changelog = "https://github.com/dislovelhl/acgs2/blob/main/tools/acgs2_cli/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/acgs2_cli",
]

[tool.hatch.build.targets.wheel]
packages = ["acgs2_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=acgs2_cli --cov-report=term-missing"

[tool.coverage.run]
source = ["acgs2_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
